--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
+    "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
   }
 }
